--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #0f0f0f;
   padding: 20px 10px;
 }
 .header .header-right {
@@ -8,7 +8,7 @@
 }
 .header a {
   float: left;
-  color: black;
+  color: white;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -53,7 +53,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  color: gray;
+  background-color: #191919;
 }
 
 .content {
