--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,6 +1,6 @@
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: rgb(15, 15, 15);
   padding: 20px 10px;
 
   .header-right {
@@ -9,7 +9,7 @@
 
   a {
     float: left;
-    color: black;
+    color: white;
     text-align: center;
     padding: 12px;
     text-decoration: none;
