--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,15 +1,2 @@
 @use "header.scss";
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(25, 25, 25);
-}
-
-.content {
-  color: white;
-}
+@use "main.scss";
